--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "_electron": "nodemon --exec \"cross-env APP_URL=http://localhost:3000 electron .\" --ext js --watch public/",
     "_build": "react-scripts build",
     "start": "concurrently \"yarn _react\" \"wait-on http://localhost:3000 && yarn _electron\" ",
-    "build": "yarn _build && build --mac --win --linux --x64 --ia32 -p always",
+    "build": "yarn _build && build --win --x64 --ia32 -p always",
     "icons": "electron-icon-maker -i public/img/pennywise.png -o public",
     "test": "mocha"
   },
@@ -111,7 +111,7 @@
     "nodemon": "^1.19.1",
     "popper.js": "^1.15.0",
     "spectron": "^5.0.0",
-    "wait-on": "^3.2.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "wait-on": "^3.2.0"
   }
 }
